Implement font structure

--- a/src/styles.less
+++ b/src/styles.less
@@ -8,3 +8,4 @@
 
 // @primary-color: #1890ff;
 /* You can add global styles to this file, and also import other style files */
+@import './assets/fonts/vic/vic-font.css';
