--- a/src/app/shared/contact/contact.component.html
+++ b/src/app/shared/contact/contact.component.html
@@ -1,30 +1,26 @@
-<!-- <form class="contact-form" (submit)="sendEmail($event)">
-    <label>Name</label>
-    <input type="text" name="user_name">
-    <label>Email</label>
-    <input type="email" name="user_email">
-    <label>Message</label>
-    <textarea name="message"></textarea>
-    <input type="submit" value="Send">
-</form> -->
+<div class="contact-bg">
 
+  <p>
+    Sign up for early access.
+  </p>
 
-<form nz-form (ngSubmit)="sendEmail($event)">
-    <nz-form-item>
-      <!-- <nz-form-label [nzSpan]="7" nzRequired>Name</nz-form-label> -->
-      <nz-form-control [nzSpan]="12">
-        <input nz-input name="user_name" placeholder="Enter your name" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <!-- <nz-form-label [nzSpan]="7" nzRequired>Email</nz-form-label> -->
-      <nz-form-control [nzSpan]="12">
-        <input nz-input name="user_email" placeholder="Enter your name" />
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-control [nzOffset]="7" [nzSpan]="12">
-        <button nz-button nzType="primary">Submit</button>
-      </nz-form-control>
-    </nz-form-item>
-  </form>
+  <form nz-form (ngSubmit)="sendEmail($event)" class="login-form" [nzLayout]="'vertical'">
+      <!-- <nz-form-item> -->
+        <!-- <nz-form-label [nzSpan]="7" nzRequired>Name</nz-form-label> -->
+        <!-- <nz-form-control [nzSpan]="12">
+          <input class="ant-input" nz-input name="user_name" placeholder="Eva Williams" />
+        </nz-form-control>
+      </nz-form-item> -->
+      <nz-form-item>
+        <!-- <nz-form-label [nzSpan]="7" nzRequired>Email</nz-form-label> -->
+        <nz-form-control [nzSpan]="12">
+          <input class="ant-input" nz-input name="user_email" placeholder="eva@xanadu.com" />
+        </nz-form-control>
+      </nz-form-item>
+      <nz-form-item>
+        <nz-form-control [nzSpan]="12">
+          <button nz-button nzType="primary" class="form-button">Keep me posted!</button>
+        </nz-form-control>
+      </nz-form-item>
+    </form>
+</div>
