--- a/src/styles.less
+++ b/src/styles.less
@@ -28,8 +28,19 @@
 @screen-xxxl: 1800px;
 @screen-xxxl-min: @screen-xxxl;
 
+
+// New variables
+@flb-page-max-width: 1240px;
+
 body {
     padding: 48px;
+}
+
+
+.constrained-width {
+    max-width: @flb-page-max-width;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .header {
@@ -73,24 +84,30 @@ body {
     background-color: @primary-color;
 
     border-radius: 0 16px 16px;
-    padding: 16px;
     color: @white;
+    width: 100%;
+    min-height: 256px;
+    
     .message {
+        padding: 32px;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 50%;
+        // max-width: 100%;
+        // width: 100%;
+        flex: 1;
 
-        .tagline {
-            font-size: 16px;
-            line-height: 24px;
+            font-size: 18px;
+            font-weight: 300;
+            line-height: 32px;
             margin-bottom: 0;
-        }
-        .earlyaccess {
-            color: @normal-color;
-        }
+
+            strong {
+                font-weight: 600;
+                font-size: 40px;
+            }
     }
-    @media only screen and (max-width: @screen-sm) {
+    @media only screen and (max-width: @screen-lg) {
         flex-direction: column;
 
         .message {
@@ -99,4 +116,93 @@ body {
         }
     }
 
+}
+
+.contact-bg {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    
+    padding: 32px;
+
+    background-color: rgba(255,255,255,0.25);
+    min-width: 464px;
+    max-width: 464px;
+    width: 100%;
+    height: 100%;
+
+    color: @white;
+
+    @media only screen and (max-width: @screen-lg) {
+        min-width: 100%;
+    
+    }
+    
+    .login-form-button {
+        width: 100%;
+    }
+
+
+    .form-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 192px;
+        height: 40px;
+        margin-bottom: 0;
+        
+        color: @white;
+        background: #2D1A3F;
+        backdrop-filter: blur(50px);
+        border: 0.5px solid rgba(@white, 0.06);
+        border-radius: 4px;
+        
+        &:focus {
+            outline: none;
+        }
+        &:hover {
+            color: @black;
+            // background: @primary-color;
+            background: #F5C242;
+            border: solid 0.5px rgba(@white, 0.1);
+            transition: 0.3s !important;
+        }
+        &.selected {
+            background: #2D1A3F;
+            border: 0.5px solid @primary-7 !important;
+        }
+    }
+
+    // .ant-input-group {
+        .ant-textarea.ant-input {
+            padding-top: 10px;
+        }
+        .ant-input {
+            color: @white;
+            backdrop-filter: blur(50px);
+            border: 0.5px solid rgba(@white, 0.06);
+            background: @primary-color;
+            border-radius: 4px;
+            min-width: 224px;
+            height: 40px;
+            transition: background-color 0.2s ease-in-out !important;
+
+            &::placeholder {
+                color: rgba(@white,50%);
+            }
+            &:hover {
+                background: #2D1A3F;
+                border: solid 0.5px rgba(@white, 0.1);
+            }
+            &:focus {
+                background: #2D1A3F;
+                border: 0.5px solid @primary-7 !important;
+                &::placeholder {
+                    color: transparent;
+                }
+            }
+        }
+    // }
 }
