--- a/src/app/splash/brand-splash/brand-splash.component.html
+++ b/src/app/splash/brand-splash/brand-splash.component.html
@@ -1,18 +1,27 @@
 <div class="constrained-width">
     <flb-header></flb-header>
     <div class="key-message">
-        <p class="headline">
-            When whiteboarding doesn't cut it.
-        </p>
-        <p>
-            If you've worked on a product experience project, you probably know how messy it can get. 
-        </p>
-        <p>
-            Kanban boards and project plans fail to give teams a sense of how everything hangs together. Flow Bench helps different teams get clear on and contribute to the overall user journey.
-        </p> 
-        <p>
-            Whether you're a designer, marketer, developer or product manager - Flow Bench makes you the hero of the journey you're building.
-        </p>
+        <div class="headline" #flbHeadLine>
+            
+        </div>
+            
     </div>
     <flb-join-the-jourrney></flb-join-the-jourrney>
+    <div class="what-are-you">
+        <img src="/assets/the-team.svg" alt="" class="flowbenchers">
+        <div class="pitch">
+            <p>
+                If you've worked on a product experience project, you probably know how messy it can get. Agile boards and project plans fail to give teams a sense of how the experience hangs together.
+            </p>
+            <p>
+                 You get sucked into more orchestration and less execution. 
+            </p>
+            <p>          
+                Flow Bench helps different teams get clear on, and contribute to, the overall customer journey.
+            </p> 
+            <p>
+                Whether you're a designer, marketer, developer or product manager - Flow Bench makes you the hero of the journey you're building.
+            </p>
+        </div>
+    </div>
 </div>
