--- a/src/app/splash/brand-splash/brand-splash.component.html
+++ b/src/app/splash/brand-splash/brand-splash.component.html
@@ -6,7 +6,11 @@
         </div>
             
     </div>
+    
     <flb-join-the-jourrney></flb-join-the-jourrney>
+
+    <div style="padding:56.25% 0 0 0;position:relative;" class="watch-the-video"><iframe src="https://player.vimeo.com/video/600349830?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=60d5fbb1fb" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Meet Flow Bench"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+    
     <div class="what-are-you">
         <img src="/assets/the-team.svg" alt="" class="flowbenchers">
         <div class="pitch">
@@ -21,6 +25,12 @@
             </p> 
             <p>
                 Whether you're a designer, marketer, developer or product manager - Flow Bench makes you the hero of the journey you're building.
+            </p>
+            <p>
+                We're launching in 2022. If you've got ideas, hit us up , we'd love to hear from you.
+            </p>
+            <p style="margin-bottom:128px">
+                <strong>Team Flow Bench</strong>
             </p>
         </div>
     </div>
